[TESTING] Add D22 CNTT CLC

--- a/src/master-data/majorMapping.json
+++ b/src/master-data/majorMapping.json
@@ -5,6 +5,7 @@
   "CNDPT_TKDHDPT": "Công nghệ đa phương tiện - Thiết kế đồ họa đa phương tiện",
   "CNKTDDT_KTDTMT": "Công nghệ kỹ thuật điện, điện tử - Kỹ thuật điện tử máy tính",
   "CNKTDDT_XLTHVTT": "Công nghệ kỹ thuật điện, điện tử - Xử lý tín hiệu & Truyền thông",
+  "CNTT_CLC": "Công nghệ thông tin(CLC)",
   "CNTT_CNPM": "Công nghệ thông tin - Công nghệ phần mềm",
   "CNTT_HTTT": "Công nghệ thông tin - Hệ thống thông tin",
   "KT": "Kế toán",
