--- a/src/master-data/majorMapping.json
+++ b/src/master-data/majorMapping.json
@@ -19,5 +19,6 @@
   "TMDT": "Thương mại điện tử",
   "CNTCF": "Công nghệ tài chính Fintech",
   "BC": "Báo chí",
-  "KHMT": "Khoa học máy tính"
+  "KHMT": "Khoa học máy tính",
+  "CNTT_UDU": "Cử nhân Công nghệ thông tin"
 }
